--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,11 @@
     "**/.*",
     "node_modules",
     "bower_components",
+    "lib",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "1.5.5"
+  }
 }
