--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chart",
+  "name": "schort",
   "version": "1.0.0",
-  "description": "bar chart for sorter",
+  "description": "bar chart for insertion sort algorithm",
   "main": "index.js",
   "scripts": {
     "test": "npm test"
@@ -12,5 +12,11 @@
     "sorter"
   ],
   "author": "NM",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "morgan": "^1.7.0",
+    "node": "0.0.0"
+  }
 }
