--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "bar chart for insertion sort algorithm",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "bower install&&\nnode index.js",
     "test": "npm test"
   },
   "keywords": [
