--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.5.5"
+    "angular": "1.5.5",
+    "bootstrap-material-design": "^0.5.9",
+    "animate.css": "^3.5.1"
   }
 }
